service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    addonmanager.kubernetes.io/mode: Reconcile
    k8s-app: zcp-kubernetes-dashboard
    kubernetes.io/cluster-service: "true"
  name: zcp-kubernetes-dashboard
  namespace: kube-system
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 9090
  selector:
    k8s-app: zcp-kubernetes-dashboard
  type: ClusterIP
