ingress-aks.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: private-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: zcp-kubernetes-dashboard
  namespace: kube-system
spec:
  rules:
  - host: skn-dashboard.cloudzcp.io  # hostname 수정
    http:
      paths:
      - backend:
          serviceName: zcp-kubernetes-dashboard
          servicePort: 80
  tls:
  - hosts:
    - skn-dashboard.cloudzcp.io  # hostname 수정
    secretName: cloudzcp-io-cert
